# TrueMan

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/nature-paper2ppt/: SKILL.md
.claude/skills/nature-polishing/: SKILL.md
docs/: implementation_plan.md  local_test_tutorial.md  paper.tex  references_report.md  render_pdf.py
docs/sn-article-template/: sn-article.tex  trueman-references.bib
docs/sn-article-v2/: sn-article-v2-template.tex  sn-article-v2.tex  trueman-references.bib
docs/sn-article-v2/analysis/: analyze_phi_r.py  phi_r_stats.json
examples/: chat_demo.py
experiments/awareness/: __init__.py  run_all.py  run_all_rigorous.py  run_baseline.py  run_cpu_quick.py  run_fast.py  test_cpu_minimal.py
experiments/awareness/baselines/: __init__.py  tier0_pure_llm.py  tier1_structural.py  tier2_memory.py  tier3_random_policy.py
experiments/awareness/evaluation/: __init__.py  blind_scorer.py  comparator.py  scorer.py  statistics.py
experiments/v2_ambitious/: PREREGISTRATION.md  README.md  rerun_v2.sh  run_all.sh  run_v2.py
tests/: test_awareness_experiments.py  test_homeostasis.py  test_integration.py  test_memory.py  test_v2_pipeline.py
trueman/: __init__.py
trueman/configs/: base.yaml  llm_agent.yaml
trueman/core/: agent.py  config.py  environment.py  llm_api_backend.py  llm_backend.py
trueman/core/homeostasis/: core.py  (+3 more)
trueman/evaluation/: atari_bench.py  metrics.py  text_bench.py
trueman/training/: continual_bp.py  online_distill.py  sleep_consolidation.py
trueman/utils/: logging.py
(+117 files in other folders)
